poi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi-deployment
  namespace: api
  labels:
    app: poi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi
    spec:
      containers:
       -
        name: poi
        image: registrynpi4760.azurecr.io/tripinsights/poi:latest
        ports:
         - containerPort: 80
