trips.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips-deployment
  namespace: api
  labels:
    app: trips
spec:
  replicas: 2
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
    spec:
      containers:
       -
        name: trips
        image: registrynpi4760.azurecr.io/tripinsights/trips:latest
        ports:
         - containerPort: 80
