userjava.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userjava-deployment
  namespace: api
  labels:
    app: userjava
spec:
  replicas: 2
  selector:
    matchLabels:
      app: userjava
  template:
    metadata:
      labels:
        app: userjava
    spec:
      containers:
       -
        name: userjava
        image: registrynpi4760.azurecr.io/tripinsights/user-java:latest
        ports:
         - containerPort: 80
