userprofile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile-deployment
  namespace: api
  labels:
    app: userprofile
spec:
  replicas: 2
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      containers:
       -
        name: userprofile
        image: registrynpi4760.azurecr.io/tripinsights/userprofile:latest
        ports:
         - containerPort: 80
